Use query execution start time as the value of now-like functions - #149
- Add FunctionProperties interface to capture query metadata and
 provide to function implementations.
- Update FunctionBuilder to take FunctionProperties in addition to
 function arguments when evaluating a SQL function.
- Implement now-like functions using FunctionProperties.
- Add FunctionDSL.nullMissingHandlingWithProperties to allow for
 consistent null and missing value handling across all functions.
- Remove constant value caching from ExpressionAnalyzer
 -- the same behavior is now implemented with FunctionProperties.

### Unit Tests
- Adjust getQueryStartClock_differs_from_instantNow unit test.
  On Windows, getQueryStartClock_differs_from_instantNow fails
  because Instant.now() in the test returns the same value as
  Instant.now() called for FunctionProperties construction.
- Add unit tests for FunctionDSL.
- Use Spring to instantiate dsl in OpenSearchTestBase.

Signed-off-by: MaxKsyunz <maxk@bitquilltech.com>